--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,33 @@
+[build-system]
+requires = ["setuptools ~= 69.0", "wheel ~= 0.42"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "test-semantic-release"
+version = "0.0.1"
+description = "Automatic Semantic Versioning for Python projects"
+requires-python = ">=3.8"
+license = { text = "MIT" }
+classifiers = [
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+]
+authors = [{ name = "Ilya Michlin", email = "some@email.com" }]
+dependencies = []
+
+
 [tool.semantic_release]
-version_variable = 'test_semantic_release/1.py:__version__'
+tag_format = "v{version}"
+version_variables = ["test_semantic_release/__init__.py:__version__"]
+version_toml = ["pyproject.toml:project.version"]
 upload_to_pypi = false
 patch_without_tag = true
+
+[tool.semantic_release.changelog]
+template_dir = "templates"
+changelog_file = "CHANGELOG.md"
+exclude_commit_patterns = []
+
+[tool.semantic_release.branches.main]
+match = "(main|master)"
+prerelease = false
