--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,19 +29,11 @@ patch_without_tag = true
 
 [tool.semantic_release.commit_parser_options]
 allowed_tags = [
-  "build",
-  "chore",
-  "ci",
-  "docs",
   "feat",
-  "fix",
-  "perf",
-  "style",
-  "refactor",
-  "test",
+  "",
 ]
 minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
+patch_tags = [""]
 
 [tool.semantic_release.changelog]
 template_dir = "templates"
