--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,19 @@ patch_without_tag = true
 
 [tool.semantic_release.commit_parser_options]
 allowed_tags = [
+  "build",
+  "chore",
+  "ci",
+  "docs",
   "feat",
-  "",
+  "fix",
+  "perf",
+  "style",
+  "refactor",
+  "test",
 ]
 minor_tags = ["feat"]
-patch_tags = [""]
+patch_tags = ["fix", "perf"]
 
 [tool.semantic_release.changelog]
 template_dir = "templates"
