--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,28 +2,48 @@ name: Release Package
 
 on:
   workflow_dispatch:
+    inputs:
+      increment_version:
+        description: 'Increment version by major, minor, or patch'
+        required: false
+        default: 'patch'
+        type: choice
+        options:
+        - major
+        - minor
+        - patch
+      is_prerelease:
+        description: 'Is this a pre-release?'
+        required: false
+        default: "false"
+        type: boolean
 
 jobs:
-  semantic-release:
+  release:
     runs-on: ubuntu-latest
+    env:
+      AWS_ROLE_ARN: arn:aws:iam::338029825956:role/GithubRole-3109041
+      AWS_DEFAULT_REGION: us-east-1
+      GIT_COMMITTER_NAME: 'Python Semantic Release bot'
     permissions:
-      id-token: write
       contents: write
-
+      id-token: write
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
         token: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
+
+    - name: Set up Python Environment
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
     - name: Python Semantic Release
       uses: python-semantic-release/python-semantic-release@v9.4.2
       with:
         github_token: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
-        root_options: "-vv"
-      env:
-        GIT_COMMITTER_NAME: Semantic Release
-        GIT_COMMITTER_EMAIL: action@github.com
-
-    - name: Check directory contents
-      run: ls -la
+        git_committer_name: ${{ env.GIT_COMMITTER_NAME }}
+        force:  ${{ inputs.increment_version}}
+        prerelease: ${{ inputs.is_prerelease }}
