--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       increment_version:
         description: 'Increment version by major, minor, or patch'
         default: ''
+        required: false
         type: choice
         options:
         - major
