--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,5 +42,5 @@ jobs:
       with:
         github_token: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
         git_committer_name: ${{ env.GIT_COMMITTER_NAME }}
-        force: ${{ inputs.increment_version && inputs.is_prerelease == 'false' }}
+        force: ${{ inputs.increment_version }}
         prerelease: ${{ inputs.is_prerelease }}
